--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.picture-url {
+  object-fit: cover;
+  width: 100px;
+  height: 100px;
+}
+
+.picture-url.picture-url-round {
+  border-radius: 100%;
+}
