--- a/client/src/components/People/People.css
+++ b/client/src/components/People/People.css
@@ -1,19 +1,41 @@
-.default-picture {
-  height: 286px;
-  background-color: brown;
-  color: white;
-  font-size: 50px;
-  line-height: 286px;
+.People-searchbar {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
 }
+
+.card {
+  margin: 10px 10px;
+}
+
 
 .people-cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 10px 80px;
+  justify-content: center;
+  /* margin: 10px 180px; */
 }
 
 .card-img-top {
+  background-size: cover;
+  background-position: center;
   object-fit: cover;
-  height: 286px;
+  height: 100px;
+  /* border-radius: 100%;   */
+}
+
+.default-picture {
+  height: 100px;
+  background-color: brown;
+  color: white;
+  font-size: 50px;
+  line-height: 100px;
+}
+
+.card-body {
+  padding: 10px !important;
+}
+
+.card-text {
+  font-size: 0.9em;
 }
