--- a/client/src/components/People/SingleUser.css
+++ b/client/src/components/People/SingleUser.css
@@ -18,3 +18,34 @@
   border-radius: 2%;
   width: 800px;
 }
+
+.contact-logos {
+  margin-bottom: 45px;
+}
+
+.SingleUser .logo-mail {
+  width: 35px;
+  padding: 5px;
+  background-color: pink;
+  border-radius: 20%;
+  margin-right: 5px;
+}
+
+.logo-phone {
+  height: 30px;
+  width: 30px;
+  padding: 5px;
+  background-color: pink;
+  border-radius: 20%;
+}
+
+.SingleUser .default-picture {
+  height: 300px;
+  width: 300px;
+  background-color: brown;
+  color: white;
+  font-size: 50px;
+  line-height: 100px;
+  border-radius: 2%;
+  margin-right: 20px;
+}
