--- a/client/src/components/People/SingleUser.css
+++ b/client/src/components/People/SingleUser.css
@@ -12,11 +12,22 @@
   border-radius: 2%;
 }
 
+.profile-main {
+  display: flex;
+  flex-direction: column;
+}
+
+.profile-main div {
+  /* display: flex; */
+  justify-content: flex-start;
+}
+
 .profile-content {
   padding: 20px;
   background-color: #ECEEEF;
   border-radius: 2%;
   width: 800px;
+  text-align: left;
 }
 
 .contact-logos {
@@ -42,10 +53,22 @@
 .SingleUser .default-picture {
   height: 300px;
   width: 300px;
-  background-color: brown;
+  background-color: gray;
   color: white;
-  font-size: 50px;
-  line-height: 100px;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+  font-size: 150px;
   border-radius: 2%;
   margin-right: 20px;
+
+}
+
+.edit-delete-buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+.edit-delete-buttons .edit-button {
+  margin-right: 8px;
 }
