--- a/client/src/styles/_custom_bootstrap.scss
+++ b/client/src/styles/_custom_bootstrap.scss
@@ -1,10 +1,11 @@
 // New color
-$new-color: darkblue;
+$primary-color: #021429;
+$secondary-color: #00C8FF;
 
 // Array of colors from _variables.scss
 $theme-colors: (
-  primary: $new-color,
-  // secondary: $gray-600,
+  primary: $primary-color,
+  secondary: $secondary-color,
   // success: $green,
   // info: $cyan,
   // warning: $yellow,
